# mqhandler-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/mqhandlerbot/: dto.py  handlers.py  health_check.py  main.py  publisher.py
